# rust-web-basic

./: Cargo.toml  README.md
src/: main.rs
src/router/: mod.rs
src/service/: mod.rs
